[package]
name = "ref_eq"
version = "1.0.0"
authors = ["Eitan Mosenkis <eitan@mosenkis.net>"]
description = "Determine if two borrowed pointers point to the same thing."
repository = "https://github.com/emosenkis/ref_eq"
license = "MIT/Apache-2.0"
keywords = ["reference", "equality", "equals", "compare", "identity"]
